1.5b3

 - Creating a new data saver could under obscure circumstances cause an
   exception "AttributeError: SavedFormInput" in some old compatibility code.
   Removed the offending code. (Steve McMahon)

 - Add some protection against trying to save old, unusable content types
   back to kupu's linkable's resource. (Steve McMahon)

 - guess_content_type, used in htmlValue in the file field, needs the same
   import protection used in the save data adapter, or it will fail in 
   later Zopes. (Thanks, Tom Gross)

1.5b2

 - Support for export/import of PloneFormGen form folders via generic setup
   profiles and the portal_setup tool as well as contextual form (i.e. on an 
   individual form basis) export/import. Feature aimed at improving the 
   development capabilities of PloneFormGen and simplifying the lives of 
   integrators. Feature considered experimental.  Use with care and test 
   thoroughly. (Andrew Burkhalter)

 - Make sure server-side only fields can supply a value via the default override.
   (David Glick)

 - Don't break old forms that are missing some of the new fields. (David Glick)

 - Add quick edit mode for forms. (Steve McMahon)

1.5b1

 - Added 'Server-Side Variable' override so that you can make an expression
   available to action adapters without passing it in a hidden field.
   (Fulvio Casali, Alex Tokar, David Glick)

 - Add ${key} style substitution from form dictionary
   for mailer subject, prologue, epilogue and footer. Also,
   ThanksPage prologue and epilogue. (Steve McMahon)

 - Add CSRF protection option (on by default). [Plone 3 only] (Steve McMahon)

 - Added support for choosing an alternate csv text delimiter for Save Data 
   Adapters. (Jesse Snyder)

 - Adapters are now activated when pasted into form folders. (Jesse Snyder)

 - Added 'force SSL' option for form folders. (David Glick)

 - Removed validator from the form action override field. This allows
   relative urls in the override. (Michael Dunlap)
